# wave2

./: CMakeLists.txt  config.h.cmake  dune.module  wave2.pc.in
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/wave2/: CMakeLists.txt  wave2.hh
src/: CMakeLists.txt  bctype.hh  domena1.geo  domena1.msh  domena2.geo  domena2.msh  domena4.geo  driver.hh  norm.hh  operator.hh  wave.ini  wave2.cc
